Added Page Navigation Buttons at Bottom of almost every HTML file.

--- a/2 Unit One Content/Data Levels of Measurement and Sampling.html
+++ b/2 Unit One Content/Data Levels of Measurement and Sampling.html
@@ -115,36 +115,54 @@
                     </div>
 
                     <h2>Levels of Measurement</h2>
-                    <p>Statistics involves understanding, analyzing, and interpreting data, and a key component is determining the "level of measurement" of data. Levels of measurement are important because they determine the types of statistical analyses that can be performed and ensure proper interpretation of data. There are four levels of measurement: nominal, ordinal, interval, and ratio. Each builds upon the previous level, providing more information about the data.</p>
+                    <p>Statistics involves understanding, analyzing, and interpreting data, and a key component is
+                        determining the "level of measurement" of data. Levels of measurement are important because they
+                        determine the types of statistical analyses that can be performed and ensure proper
+                        interpretation of data. There are four levels of measurement: nominal, ordinal, interval, and
+                        ratio. Each builds upon the previous level, providing more information about the data.</p>
 
                     <div class="definition">
-                      <h2 class="definition-header">Different Levels of Measurement</h2>
-                      <p><b>Nominal Level:</b> Data at this level are categorized without any order. For example, trying to classify people according to their favorite food does not make any sense: putting pizza first and sushi second is not meaningful. Examples might include anything that is qualitative data where there is no inherent order that can be prescribed: gender, eye color, types of fruits, etc.</p>
-                      <p><b>Ordinal Level:</b> Data are categorized with a meaningful order, but differences between categories are not measurable. Examples include rankings in a competition or survey responses such as "satisfied," "neutral," or "dissatisfied."</p>
-                      <p><b>Interval Level:</b> Data have meaningful order, measurable differences, but no true zero point. Examples include temperature in Celsius or years on a calendar. Interval level data can be used in calculations, but since there is no true zero point it isn't meaningful to make a ratio. For example: 6 PM isn't twice as big as 3 PM despite there being three hours between the two times of day.</p>
-                      <p><b>Ratio Level:</b> Data have a meaningful order, measurable differences, and a true zero point, allowing for meaningful ratios. Examples include weight, height, or age.</p>
+                        <h2 class="definition-header">Different Levels of Measurement</h2>
+                        <p><b>Nominal Level:</b> Data at this level are categorized without any order. For example,
+                            trying to classify people according to their favorite food does not make any sense: putting
+                            pizza first and sushi second is not meaningful. Examples might include anything that is
+                            qualitative data where there is no inherent order that can be prescribed: gender, eye color,
+                            types of fruits, etc.</p>
+                        <p><b>Ordinal Level:</b> Data are categorized with a meaningful order, but differences between
+                            categories are not measurable. Examples include rankings in a competition or survey
+                            responses such as "satisfied," "neutral," or "dissatisfied."</p>
+                        <p><b>Interval Level:</b> Data have meaningful order, measurable differences, but no true zero
+                            point. Examples include temperature in Celsius or years on a calendar. Interval level data
+                            can be used in calculations, but since there is no true zero point it isn't meaningful to
+                            make a ratio. For example: 6 PM isn't twice as big as 3 PM despite there being three hours
+                            between the two times of day.</p>
+                        <p><b>Ratio Level:</b> Data have a meaningful order, measurable differences, and a true zero
+                            point, allowing for meaningful ratios. Examples include weight, height, or age.</p>
                     </div>
-                    
+
                     <div class="example">
-                      <h2 class="example-header">Example Problem</h2>
-                      <p>Classify the following scenarios by their level of measurement:</p>
-                      <ol type="a">
-                        <li>Types of cars (e.g., SUV, sedan, truck).</li>
-                        <li>The ranking of runners in a race.</li>
-                        <li>Temperature readings in Fahrenheit.</li>
-                        <li>The time it takes for participants to complete a task, measured in seconds.</li>
-                      </ol>
+                        <h2 class="example-header">Example Problem</h2>
+                        <p>Classify the following scenarios by their level of measurement:</p>
+                        <ol type="a">
+                            <li>Types of cars (e.g., SUV, sedan, truck).</li>
+                            <li>The ranking of runners in a race.</li>
+                            <li>Temperature readings in Fahrenheit.</li>
+                            <li>The time it takes for participants to complete a task, measured in seconds.</li>
+                        </ol>
                     </div>
-                    
+
                     <div class="solution">
                         <h2 class="solution-header">Solution</h2>
                         <ol type="a">
-                          <li><b>Nominal:</b> Types of cars are categorized without order.</li>
-                          <li><b>Ordinal:</b> Rankings in a race indicate an order but do not provide measurable differences between positions.</li>
-                          <li><b>Interval:</b> Fahrenheit temperatures provide measurable differences but lack a true zero.</li>
-                          <li><b>Ratio:</b> Time in seconds includes meaningful differences and a true zero, allowing for ratios.</li>
+                            <li><b>Nominal:</b> Types of cars are categorized without order.</li>
+                            <li><b>Ordinal:</b> Rankings in a race indicate an order but do not provide measurable
+                                differences between positions.</li>
+                            <li><b>Interval:</b> Fahrenheit temperatures provide measurable differences but lack a true
+                                zero.</li>
+                            <li><b>Ratio:</b> Time in seconds includes meaningful differences and a true zero, allowing
+                                for ratios.</li>
                         </ol>
-                      </div>
+                    </div>
 
                     <h2>Sampling Techniques</h2>
                     <p>Sampling is used when gathering data from an entire population is impractical or too expensive. A
@@ -177,7 +195,8 @@
 
                     <div class="example">
                         <h2 class="example-header">Example 3: Identify Sampling Techniques</h2>
-                        <p>A study intends to determine the average tuition paid by Tennessee Technological University undergraduate
+                        <p>A study intends to determine the average tuition paid by Tennessee Technological University
+                            undergraduate
                             students per semester. Identify the sampling method used in each scenario:</p>
                         <ol type="a">
                             <li>Organize students by year (e.g., first-year, sophomore), then select 25 from each.</li>
@@ -205,10 +224,16 @@
                                 potential bias.</li>
                         </ol>
                     </div>
+
+                    <div>
+                        <button id="prevPage" class="navigation-link previous" role="button">Previous Page</button>
+                        <button id="nextPage" class="navigation-link next" role="button">Next Page</button>
+                    </div>
+
+
                 </div>
             </div>
-    </div>
-    </main>
+        </main>
     </div>
 </body>
 
