--- a/2 Unit One Content/Introductory Terms and Concepts for Statistics.html
+++ b/2 Unit One Content/Introductory Terms and Concepts for Statistics.html
@@ -181,6 +181,10 @@
                         includes numerous mathematical formulas, the focus is primarily on understanding the data rather
                         than performing extensive calculations, which can be handled by calculators or computers. A
                         solid grasp of statistical fundamentals fosters confidence in decision-making.</p>
+                    <div>
+                        <button id="prevPage" class="navigation-link previous" role="button">Previous Page</button>
+                        <button id="nextPage" class="navigation-link next" role="button">Next Page</button>
+                    </div>
                 </div>
             </div>
         </main>
