--- a/2 Unit One Content/Measures of Center.html
+++ b/2 Unit One Content/Measures of Center.html
@@ -276,6 +276,11 @@
                         statistics depends on the soundness of the sampling method; poor methods can lead to misleading
                         results.</p>
 
+                    <div>
+                        <button id="prevPage" class="navigation-link previous" role="button">Previous Page</button>
+                        <button id="nextPage" class="navigation-link next" role="button">Next Page</button>
+                    </div>
+
                 </div>
             </div>
         </main>
