--- a/2 Unit One Content/Measures of Variation.html
+++ b/2 Unit One Content/Measures of Variation.html
@@ -119,8 +119,8 @@
                             If we add that value of 7.0 to those listed in the data set, do the measures of variation
                             change much?</p>
                         <p>Because of the amount of data, this dataset is omitted from viewing, but can be viewed
-                            visually in a scrollable table by clicking the button below or by downloading the data here: <a
-                                href="../datasets/24_Earthquakestxt.csv" download>Download Earthquake Data</a>.</p>
+                            visually in a scrollable table by clicking the button below or by downloading the data here:
+                            <a href="../datasets/24_Earthquakestxt.csv" download>Download Earthquake Data</a>.</p>
                         <button aria-describedby="tableDescription"
                             onclick="generateTable('../datasets/24_Earthquakestxt.csv', 'Table 2: Magnitude and Depth Data')">View
                             Table of Earthquake Data</button>
@@ -158,6 +158,10 @@
                         <li>95% of the data lies within 2 standard deviations of the mean.</li>
                         <li>99.7% of the data lies within 3 standard deviations of the mean.</li>
                     </ul>
+                    <div>
+                        <button id="prevPage" class="navigation-link previous" role="button">Previous Page</button>
+                        <button id="nextPage" class="navigation-link next" role="button">Next Page</button>
+                    </div>
                 </div>
             </div>
         </main>
