--- a/3 Unit Two Content/Addition Rule for Probability.html
+++ b/3 Unit Two Content/Addition Rule for Probability.html
@@ -269,13 +269,18 @@
                         <h2 class="solution-header">Solution</h2>
                         <p>
                             The complement of \(P(\text{rain today})\) is \(P(\text{no rain today})\), and if we want to
-                            find the \(P(\text{no rain today}) \) we could use the second formula above: \( P(\overline{A}) = 1 - P(A) \). Writing \(P(\text{rain today})\) as a decimal we know \(20\% = 0.20\) giving us
+                            find the \(P(\text{no rain today}) \) we could use the second formula above: \(
+                            P(\overline{A}) = 1 - P(A) \). Writing \(P(\text{rain today})\) as a decimal we know \(20\%
+                            = 0.20\) giving us
                             \[
                             P(\text{no rain today}) = 1 - P(\text{rain today}) = 1 - 0.2 = 0.8 \text{ or } 80\%.
                             \]
                         </p>
                     </div>
-
+                    <div>
+                        <button id="prevPage" class="navigation-link previous" role="button">Previous Page</button>
+                        <button id="nextPage" class="navigation-link next" role="button">Next Page</button>
+                    </div>
 
                 </div>
             </div>
