--- a/3 Unit Two Content/Introduction to Probability Theory.html
+++ b/3 Unit Two Content/Introduction to Probability Theory.html
@@ -66,7 +66,8 @@
                         <h2 class="definition-header">Definition: Event</h2>
                         <p>An event is any collection of results or outcomes of a procedure. For example: if the
                             procedure was “flipping a coin,” the possible events can be <strong>heads</strong> or
-                            <strong>tails</strong>.</p>
+                            <strong>tails</strong>.
+                        </p>
                     </div>
 
                     <div class="definition">
@@ -336,7 +337,10 @@
                             </li>
                         </ol>
                     </div>
-
+                    <div>
+                        <button id="prevPage" class="navigation-link previous" role="button">Previous Page</button>
+                        <button id="nextPage" class="navigation-link next" role="button">Next Page</button>
+                    </div>
                 </div>
             </div>
         </main>
