--- a/index.html
+++ b/index.html
@@ -39,11 +39,17 @@
             <h2>Start Here</h2>
             <ul>
                 <li><a href="1 Start Here/GeoGebra Embed Codes.html">GeoGebra Applets for Statistics</a></li>
-                <li><a href="1 Start Here/Objectives.html">Objectives</a></li>
+                <!-- <li><a href="1 Start Here/Objectives.html">Objectives</a></li> -->
             </ul>
         </section>
 
+        <div class="caution">
+            <h2 class="caution-header">Structuring Note</h2>
+            <p>This structure for the below contents may not be optimal for a full class. Development and Refinement will continue during the Spring 2025 semester. The grant deadlines we were working with didn't allow as much time as we would have liked to have a more complete project.</p>
+        </div>
+
         <section>
+            
             <h2>Unit One Content</h2>
             <ul>
                 <li><a href="2 Unit One Content/Data Levels of Measurement and Sampling.html">Data Levels of Measurement and Sampling</a></li>
@@ -78,12 +84,12 @@
             </ul>
         </section>
 
-        <section>
+        <!-- <section>
             <h2>Final Exam</h2>
             <ul>
                 <li><a href="#">Coming Soon</a></li>
             </ul>
-        </section>
+        </section> -->
 
         <div>
             <button id="prevPage" class="navigation-link previous" role="button">Previous Page</button>
