--- a/2 Unit One Content/Measures of Location.html
+++ b/2 Unit One Content/Measures of Location.html
@@ -50,7 +50,8 @@
                         <li>Data values are considered significantly low if their z-score is \( \leq -2 \) and
                             significantly high if their z-score is \( \geq 2 \).</li>
                         <li>Values <strong>less than</strong> than the mean will have a negative z-score and values
-                            <strong>greater than</strong> the mean will have a positive z-score.</li>
+                            <strong>greater than</strong> the mean will have a positive z-score.
+                        </li>
                     </ul>
 
                     <p><strong>Round-Off Rule for Z-Scores:</strong> Typically we round z-scores to two decimal places.
@@ -94,53 +95,77 @@
                     </div>
 
                     <h2>Percentiles</h2>
-                    <p>Percentiles are an essential tool in statistical analysis, used to divide data into groups with equal proportions of values. They help in understanding the distribution and significance of data points, which is crucial not only for everyday data interpretation but also for advanced statistical methods like resampling.</p>
-   
+                    <p>Percentiles are an essential tool in statistical analysis, used to divide data into groups with
+                        equal proportions of values. They help in understanding the distribution and significance of
+                        data points, which is crucial not only for everyday data interpretation but also for advanced
+                        statistical methods like resampling.</p>
+
                     <div class="definition">
                         <h2 class="definition-header">Definition: Percentile</h2>
-                        <p>A percentile indicates the percentage of data values below a particular value in a dataset. For example, the 90th percentile means 90% of the data values are below the given value. We can find the percentile of a data value \( x \) using the following formula:
+                        <p>A percentile indicates the percentage of data values below a particular value in a dataset.
+                            For example, the 90th percentile means 90% of the data values are below the given value. We
+                            can find the percentile of a data value \( x \) using the following formula:
                             \[ \text{Percentile of value }x=\frac{\text{number of values less than}\, x}{n}*100\]
-                            Often a percentile is represented as \( P_k \) where \( k \) is the percentile. So the 90th percentile would be \(P_{90}\).</p>
+                            Often a percentile is represented as \( P_k \) where \( k \) is the percentile. So the 90th
+                            percentile would be \(P_{90}\).</p>
                     </div>
 
                     <div class="example">
                         <h2 class="example-header">Example <span class="example-number"></span>: Finding a Percentile
                         </h2>
-                        <p>The following data represents the daily number of customers visiting a coffee shop over the course of 10 days: 35, 10, 45, 5, 30, 25, 15, 50, 20, 40. What is \(P_{40} \) for this dataset or the 40th percentile?</p>
+                        <p>The following data represents the daily number of customers visiting a coffee shop over the
+                            course of 10 days: 35, 10, 45, 5, 30, 25, 15, 50, 20, 40. What is \(P_{40} \) for this
+                            dataset or the 40th percentile?</p>
                         <pre id="percentileData" style="display:none;">5, 10, 15, 20, 25, 30, 35, 40, 45, 50</pre>
-        <button onclick="copyToClipboard('percentileData')">Copy Data to Clipboard</button>
+                        <button onclick="copyToClipboard('percentileData')">Copy Data to Clipboard</button>
                     </div>
 
                     <div class="solution">
                         <h2 class="solution-header">Solution</h2>
-                        <p>We first need to make sure we order the dataset. We can use technology to order the data for later datasets. We get 5, 10, 15, 20, 25, 30, 35, 40, 45, 50. Then we perform the calculation, the 40th percentile lies at the 4th value (calculated as \( 0.4 \times
+                        <p>We first need to make sure we order the dataset. We can use technology to order the data for
+                            later datasets. We get 5, 10, 15, 20, 25, 30, 35, 40, 45, 50. Then we perform the
+                            calculation, the 40th percentile lies at the 4th value (calculated as \( 0.4 \times
                             10 = 4 \)). Thus, the 40th percentile is 20.</p>
                     </div>
 
                     <h2>Quartiles</h2>
-                    <p>Quartiles divide data into four equal groups, with approximately 25% of the data in each group. These are key measures of location that help in understanding the distribution of a dataset. Just as there are 99 percentiles dividing data into 100 groups, there are three quartiles dividing data into four groups.</p>
-   
+                    <p>Quartiles divide data into four equal groups, with approximately 25% of the data in each group.
+                        These are key measures of location that help in understanding the distribution of a dataset.
+                        Just as there are 99 percentiles dividing data into 100 groups, there are three quartiles
+                        dividing data into four groups.</p>
+
                     <div class="definition">
                         <h2 class="definition-header">Definition: Quartiles</h2>
                         <p>Quartiles are denoted as Q<sub>1</sub>, Q<sub>2</sub>, and Q<sub>3</sub>:</p>
                         <ul>
-                            <li>Q<sub>1</sub> (First Quartile): The same as the 25th percentile, separating the lowest 25% of values from the rest.</li>
-                            <li>Q<sub>2</sub> (Second Quartile): The same as the median or 50th percentile, dividing the dataset into two equal halves.</li>
-                            <li>Q<sub>3</sub> (Third Quartile): The same as the 75th percentile, marking the cutoff for the top 25% of values.</li>
-                        </ul>                     
+                            <li>Q<sub>1</sub> (First Quartile): The same as the 25th percentile, separating the lowest
+                                25% of values from the rest.</li>
+                            <li>Q<sub>2</sub> (Second Quartile): The same as the median or 50th percentile, dividing the
+                                dataset into two equal halves.</li>
+                            <li>Q<sub>3</sub> (Third Quartile): The same as the 75th percentile, marking the cutoff for
+                                the top 25% of values.</li>
+                        </ul>
                     </div>
-                    <p>Finding quartile values follows the same procedure as finding percentiles. For example, if the 25th percentile is calculated to be 25 minutes, Q1 is also 25 minutes.</p>
+                    <p>Finding quartile values follows the same procedure as finding percentiles. For example, if the
+                        25th percentile is calculated to be 25 minutes, Q1 is also 25 minutes.</p>
 
                     <div class="example">
-                        <h2 class="example-header">Example <span class="example-number"></span>: Calculating Quartiles</h2>
-                        <p>The following dataset represents the daily high temperatures (in Fahrenheit) recorded over a 20-day period in a city: 72, 85, 88, 90, 78, 84, 82, 76, 79, 91, 87, 83, 89, 86, 80, 92, 77, 81, 75, 88. Find Q<sub>1</sub>, Q<sub>2</sub>, and Q<sub>3</sub> for this temperature data.</p>
-                        <pre id="temperatureData" style="display:none;">72, 85, 88, 90, 78, 84, 82, 76, 79, 91, 87, 83, 89, 86, 80, 92, 77, 81, 75, 88</pre>
+                        <h2 class="example-header">Example <span class="example-number"></span>: Calculating Quartiles
+                        </h2>
+                        <p>The following dataset represents the daily high temperatures (in Fahrenheit) recorded over a
+                            20-day period in a city: 72, 85, 88, 90, 78, 84, 82, 76, 79, 91, 87, 83, 89, 86, 80, 92, 77,
+                            81, 75, 88. Find Q<sub>1</sub>, Q<sub>2</sub>, and Q<sub>3</sub> for this temperature data.
+                        </p>
+                        <pre id="temperatureData"
+                            style="display:none;">72, 85, 88, 90, 78, 84, 82, 76, 79, 91, 87, 83, 89, 86, 80, 92, 77, 81, 75, 88</pre>
                         <button onclick="copyToClipboard('temperatureData')">Copy Data to Clipboard</button>
                     </div>
-                
+
                     <div class="solution">
                         <h2 class="solution-header">Solution</h2>
-                        <p>First, we will order the data: 72, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 88, 89, 90, 91, 92. For larger datasets, it is preferred that technology is used to calculate these quartiles. Using technology we get the following:</p>
+                        <p>First, we will order the data: 72, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88,
+                            88, 89, 90, 91, 92. For larger datasets, it is preferred that technology is used to
+                            calculate these quartiles. Using technology we get the following:</p>
                         <p>Q<sub>1</sub> (First Quartile) = 78.5.</p>
                         <p>Q<sub>2</sub> (Second Quartile) = 83.5 which is the median of the dataset.</p>
                         <p>Q<sub>3</sub> (Third Quartile) = 88.</p>
@@ -155,17 +180,23 @@
                     </div>
 
                     <div class="example">
-                        <h2 class="example-header">Example <span class="example-number"></span>: Box Plot from Speed Dating Study</h2>
-                        <p>In a study of speed dating conducted at Columbia University, female subjects rated the attractiveness of their male dates on a scale from 1 (not attractive) to 10 (extremely attractive). The following data represents a sample of the results: 
-                            \[ 2.0, 3.0, 4.0, 5.0, 6.0, 6.0, 7.0, 7.0, 7.0, 7.0, 7.0, 7.0, 8.0, 8.0, 8.0, 8.0, 9.0, 9.5, 10.0, 10.0. \]
+                        <h2 class="example-header">Example <span class="example-number"></span>: Box Plot from Speed
+                            Dating Study</h2>
+                        <p>In a study of speed dating conducted at Columbia University, female subjects rated the
+                            attractiveness of their male dates on a scale from 1 (not attractive) to 10 (extremely
+                            attractive). The following data represents a sample of the results:
+                            \[ 2.0, 3.0, 4.0, 5.0, 6.0, 6.0, 7.0, 7.0, 7.0, 7.0, 7.0, 7.0, 8.0, 8.0, 8.0, 8.0, 9.0, 9.5,
+                            10.0, 10.0. \]
                             Use this data to find the five-number summary and construct a box plot.</p>
-                        <pre id="speedDatingData" style="display:none;">2.0, 3.0, 4.0, 5.0, 6.0, 6.0, 7.0, 7.0, 7.0, 7.0, 7.0, 7.0, 8.0, 8.0, 8.0, 8.0, 9.0, 9.5, 10.0, 10.0</pre>
+                        <pre id="speedDatingData"
+                            style="display:none;">2.0, 3.0, 4.0, 5.0, 6.0, 6.0, 7.0, 7.0, 7.0, 7.0, 7.0, 7.0, 8.0, 8.0, 8.0, 8.0, 9.0, 9.5, 10.0, 10.0</pre>
                         <button onclick="copyToClipboard('speedDatingData')">Copy Data to Clipboard</button>
                     </div>
-                
+
                     <div class="solution">
                         <h2 class="solution-header">Solution</h2>
-                        <p>We will be calculating the five-number summary using technology. We get the following results:</p>
+                        <p>We will be calculating the five-number summary using technology. We get the following
+                            results:</p>
                         <ul>
                             <li>Minimum: 2.0</li>
                             <li>Q<sub>1</sub> (First Quartile) = 6.0</li>
@@ -173,7 +204,12 @@
                             <li>Q<sub>3</sub> (Third Quartile) = 8.0</li>
                             <li>Maximum: 10.0</li>
                         </ul>
-                        <p>Thus, the five-number summary is: Minimum = 2.0, Q<sub>1</sub> = 6.0, Median = 7.0, Q<sub>3</sub> = 8.0, Maximum = 10.0. A box plot can be constructed using these values.</p>
+                        <p>Thus, the five-number summary is: Minimum = 2.0, Q<sub>1</sub> = 6.0, Median = 7.0,
+                            Q<sub>3</sub> = 8.0, Maximum = 10.0. A box plot can be constructed using these values.</p>
+                    </div>
+                    <div>
+                        <button id="prevPage" class="navigation-link previous" role="button">Previous Page</button>
+                        <button id="nextPage" class="navigation-link next" role="button">Next Page</button>
                     </div>
                 </div>
             </div>
