--- a/1 Start Here/GeoGebra Embed Codes.html
+++ b/1 Start Here/GeoGebra Embed Codes.html
@@ -102,4 +102,11 @@ function copyToClipboard(preID) {
 <!-- Course Scripts -->
 <p>
 <script src="/shared/Content Templates/For Use/VolState_Template/VolState_Template/Template_Generic/VSTemplates/../assets/js/main.min.js"></script>
-</p></body></html>
+</p>
+
+<div>
+  <button id="prevPage" class="navigation-link previous" role="button">Previous Page</button>
+<button id="nextPage" class="navigation-link next" role="button">Next Page</button>
+</div>
+
+</body></html>
