adding way to generate blanks upon page print

--- a/2 Unit One Content/Data Levels of Measurement and Sampling.html
+++ b/2 Unit One Content/Data Levels of Measurement and Sampling.html
@@ -7,7 +7,6 @@
     <title>Data and Levels of Measurement</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async="" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <script src="../js/loadmathjax.js"></script>
 
@@ -54,10 +53,10 @@
                             Examples include weight, pulse rate, the number of people/objects, etc. Quantitative data is
                             further divided into two subcategories:</p>
                         <ul>
-                            <li><b>Discrete data</b> results when the number of possible values is either a finite
+                            <li><b><span class="blanked">Discrete data</span></b> results when the number of possible values is either a finite
                                 number or a “countable” number (i.e. the number of possible values is 0, 1, 2, 3, . . .
                                 ). Examples might include number of phone calls: 0 calls, 1 call, 2 calls, etc.</li>
-                            <li><b>Continuous data</b> results from infinitely many possible values that correspond to
+                            <li><span class="blanked"><b>Continuous data</b></span> results from infinitely many possible values that correspond to
                                 some continuous scale that covers a range of values without gaps, interruptions, or
                                 jumps. This includes almost any measurement of distance, time, volume, temperature,
                                 mass, or combination of any of these. For example, weights like 2.4 grams and 7.5 pounds
